--- a/client/components/App.css
+++ b/client/components/App.css
@@ -1,3 +1,7 @@
+body { 
+    padding-top: 65px; 
+}
+
 .table-component .table {
     table-layout:fixed;
 }
@@ -5,4 +9,38 @@
 .table-component .table td, .table th {
   word-wrap:break-word;
   word-break:break-all;
+}
+
+table {
+        width: 100%;
+    }
+
+thead, tbody, tr, td, th { display: block; }
+
+tr:after {
+    content: ' ';
+    display: block;
+    visibility: hidden;
+    clear: both;
+}
+
+thead th {
+    height: 30px;
+
+    /*text-align: left;*/
+}
+
+tbody {
+    height: 120px;
+    overflow-y: auto;
+}
+
+thead {
+    /* fallback */
+}
+
+
+tbody td, thead th {
+    width: 19.2%;
+    float: left;
 }
